Add a command-line flag to set the brainarray version

--- a/01_scraping_brainarray_genes/Dockerfile
+++ b/01_scraping_brainarray_genes/Dockerfile
@@ -1,9 +1,10 @@
 from ccdlstaging/dr_affymetrix:latest
 
-COPY scrape_brainarray_genes.R .
-
 USER root
+RUN Rscript -e 'install.packages("optparse")'
 RUN mkdir /out && chown user /out
 USER user
+
+COPY scrape_brainarray_genes.R .
 
 ENTRYPOINT [ "Rscript", "scrape_brainarray_genes.R" ]
